<resources>
    <string name="app_name">KantoTest</string>
    <string name="ok">Ok</string>
    <string name="news">News</string>
    <string name="multimedia">Multimedia</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="user_avatar">user avatar</string>

    <string name="sang">sang</string> <!-- for "USER sang SONG_NAME" -->
    <string name="user_sang_x">&lt;b>%1$s&lt;/b> \u0020 sang \u0020 &lt;b>%2$s&lt;/b></string>
    <string name="preview">preview</string>
    <string name="settings">Settings</string>
    <string name="followers">Followers</string>
    <string name="views">Views</string>
    <string name="followed">Followed</string>
    <string name="sing">sing</string>
    <string name="like">Like</string>
    <string name="x_like">%1$d Like</string>
    <string name="x_likes">%1$d Likes</string>
    <string name="rewind">rewind</string>
    <string name="edit_profile">Edit profile</string>
    <string name="close">close</string>
    <string name="back">back</string>
    <string name="change_photo">Change photo</string>
    <string name="hint_name">Name</string>
    <string name="hint_username">Username</string>
    <string name="at">at</string>
    <string name="hint_biography">Biography</string>
    <string name="error_field_name">Fill with a valid name.</string>
    <string name="error_field_username">Field with a valid username.</string>
    <string name="select_an_action">Select an action</string>
</resources>