<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="user"
            type="pro.jsandoval.kantotest.domain.model.User"
            />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            >

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/back"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close"
                app:tint="@color/gray"
                />

            <TextView
                style="@style/TextView.Title"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/edit_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/save"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/back"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_check"
                app:tint="@color/bottomNavSelected"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/user_avatar"
            app:loadUserAvatarSimple="@{user}"
            tools:srcCompat="@tools:sample/avatars"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/changePhoto"
            style="@style/Button.PrimaryLight"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/change_photo"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_name"
                android:textColor="@color/grayDark"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@{user.name}"
                android:textColor="@color/white"
                android:theme="@style/TextInputEditText.Default"
                tools:text="Fredy Mercury"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_username"
                android:textColor="@color/grayDark"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/at"
                    android:padding="2dp"
                    app:srcCompat="@drawable/ic_at"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text='@{user.username.replace("@","")}'
                    android:textColor="@color/white"
                    android:theme="@style/TextInputEditText.Default"
                    tools:text="'fredyqueen'"
                    />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_biography"
                android:textColor="@color/grayDark"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:text="@{user.biography}"
                android:textColor="@color/white"
                android:theme="@style/TextInputEditText.Default"
                tools:text="Fredy Mercury"
                />

        </LinearLayout>

    </LinearLayout>

</layout>