<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_profile"
    >

    <data>

        <import type="android.view.View" />

        <variable
            name="user"
            type="pro.jsandoval.kantotest.domain.model.User"
            />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="12dp"
        >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/user_avatar"
            app:loadUserAvatarSimple="@{user}"
            tools:srcCompat="@tools:sample/avatars"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gsans_bold"
            android:text="@{user.name}"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:text="FredyMercury"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{user.username}"
            android:textColor="@color/grayLight"
            android:textSize="12sp"
            tools:text='"@fredyqueen"'
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@{user.biography}"
            android:textColor="@color/grayLight"
            android:textSize="12sp"
            android:visibility="@{user.isHaveBiography() ? View.VISIBLE : View.GONE}"
            tools:text="Soy un super artista"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editProfile"
            style="@style/Button.Default"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/edit_profile"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/content_profile_header_details_background"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical"
                >

                <TextView
                    style="@style/Counter.User.Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{Integer.toString(user.followers)}"
                    tools:text="0"
                    />

                <TextView
                    style="@style/CounterData.User.Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical"
                >

                <TextView
                    style="@style/Counter.User.Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{Integer.toString(user.followed)}"
                    tools:text="0"
                    />

                <TextView
                    style="@style/CounterData.User.Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followed"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical"
                >

                <TextView
                    style="@style/Counter.User.Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{Integer.toString(user.views)}"
                    tools:text="0"
                    />

                <TextView
                    style="@style/CounterData.User.Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/views"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>
