<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="record"
            type="pro.jsandoval.kantotest.domain.model.Record"
            />

        <variable
            name="clickListener"
            type="pro.jsandoval.kantotest.presentation.main.profile.records.RecordViewHolder.ClickListener"
            />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/record_background"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingTop="7dp"
                android:paddingEnd="12dp"
                android:paddingBottom="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/avatar"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:contentDescription="@string/user_avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:loadUserMiniAvatar="@{record.user}"
                    app:shapeAppearanceOverlay="@style/ImageView.Circle"
                    tools:srcCompat="@tools:sample/avatars"
                    />

                <TextView
                    android:id="@+id/tvDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/avatar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:loadRecordUserSongDetails="@{record}"
                    tools:text="Freddy song Bohemian Rapsody"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ProgressBar
                    android:id="@+id/videoProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:progress="0"
                    android:progressDrawable="@drawable/progress_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <ImageView
                    android:id="@+id/imagePreview"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:contentDescription="@string/preview"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/videoProgress"
                    tools:srcCompat="@tools:sample/backgrounds/scenic"
                    />

                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/playerView"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:visibility="gone"
                    app:auto_show="true"
                    app:controller_layout_id="@layout/custom_video_controller"
                    app:fastforward_increment="2000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/videoProgress"
                    app:repeat_toggle_modes="all"
                    app:resize_mode="fill"
                    app:rewind_increment="2000"
                    app:show_buffering="always"
                    app:surface_type="texture_view"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/videoProgress"
                    app:srcCompat="@drawable/ic_video_outline"
                    app:tint="@color/white"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gsans_bold"
                        android:text="@{record.song}"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="Bohemian Rapsody"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/bottom_record_opacity"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp"
                >

                <ImageView
                    android:id="@+id/likeImage"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/like"
                    android:focusable="true"
                    android:onClick="@{() -> clickListener.likeRecord(record)}"
                    app:srcCompat="@drawable/ic_like"
                    />

                <TextView
                    android:id="@+id/likeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> clickListener.likeRecord(record)}"
                    android:textSize="15sp"
                    tools:text="20 Likes"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
